--- a/apps/music_app/templates/music_app/index.html
+++ b/apps/music_app/templates/music_app/index.html
@@ -9,21 +9,28 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="jumbotron">
-                    <h1 class="header">Hello World.</h1>
-                </div>
-           </div>
-       </div>
-        <div class="row">
-            <div class="col-md-6 left box">
-                <h1>LEFT SIDE.</h1>
-            </div>
-            <div class="col-md-6 right box">
-                <h1>RIGHT SIDE.</h1>
-            </div>
-        </div>
+    <h1>HELLO WORLD</h1>
+   
+<table >
+  <tr>
+    <th>id </th>
+    <th>ARTIST NAME </th> 
+    <th>ARTIST BIO </th> 
+    <th>CREATED AT </th>
+    <th>ACTIONS </th>
+  </tr>
+    {% for artist in artists %}
+    <tr>
+    <td>{{artist.id}}</td>
+    <td>{{artist.artist_name}}</td>
+    <td>{{artist.artist_bio}}</td>
+    <td>{{artist.created_at}}</td>
+    <td><a href='/{{artist.id}}/artist_view'>Show</a> | <a href='/{{artist.id}}/editArtist'>Edit</a> | <a href='{{artist.id}}/artist_delete'>Delete</a></td>
+    </tr>
+{% endfor %}
+</table>
+   <a href="/addArtist">ADD A NEW ARTIST</a>
+
+
 </body>
 </html>
