--- a/apps/user_app/templates/user_app/index.html
+++ b/apps/user_app/templates/user_app/index.html
@@ -50,7 +50,7 @@
                         <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" placeholder="Email">
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control" name="Password" id="password" aria-describedby="emailHelp" placeholder="Password">
+                        <input type="password" class="form-control" name="password" id="password" aria-describedby="emailHelp" placeholder="Password">
                     </div>
                     <div class="form-group">
                         <input type="password" class="form-control" name="conf_password" id="conf_password" aria-describedby="emailHelp" placeholder="Confirm Password">
