--- a/apps/music_app/templates/music_app/addArtist.html
+++ b/apps/music_app/templates/music_app/addArtist.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-        <form action='/artist_create' method='POST'>
+        <form action="{% url 'music_app:createArtist' %}" method='POST'>
         {% csrf_token %}
         <label for='artist_name'>Artist Name:</label>
         <input type='text' name='artist_name'><br>
