--- a/apps/user_app/static/user_app/css/styles.css
+++ b/apps/user_app/static/user_app/css/styles.css
@@ -6,8 +6,12 @@
     font-family: 'Roboto', sans-serif;
     
 }
+
+.main {
+    display: none
+}
+
 .jumbotron {
-    display: none;
     margin-top: 20px;
     border: 2px solid black;
     color: white;
@@ -24,7 +28,8 @@
     background-image: linear-gradient(to bottom, black, white);
 }
 
-#reset {
+.action_button {
+    margin-top: 10px;
     font-size: 1.4em;
     width: 100%;
     border: 2px solid black;
