changes on urls

--- a/apps/music_app/templates/music_app/editArtist.html
+++ b/apps/music_app/templates/music_app/editArtist.html
@@ -16,6 +16,6 @@
         <input type='text' name='artist_bio' value="{{artist.artist_bio}}"><br>
         <input type='submit' value='Update'>
     </form>
-    <a href='/{{artist.id}}/artist_view'>Show</a> | <a href="/">Go Back</a><br>
+    <a href='/{{artist.id}}/viewArtist'>Show</a> | <a href="/">Go Back</a><br>
 </body>
 </html>
