--- a/apps/music_app/templates/music_app/albumCreate.html
+++ b/apps/music_app/templates/music_app/albumCreate.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>create album</h1>
-        <form action="{% url 'music_app:createAlbum' id=artist.id %}" method='POST'>
+        <form action="{% url 'music_app:createAlbum' artist_id=artist.id %}" method='POST'>
         {% csrf_token %}
         <h1>Artist Id:{{ artist.id }}</h1>
         <label for='album_name'>ALBUM:</label>
