--- a/apps/music_app/templates/music_app/index.html
+++ b/apps/music_app/templates/music_app/index.html
@@ -5,11 +5,21 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'music_app/css/styles.css' %}" media="screen" title="session words" charset="UTF-8">
+    <link rel="stylesheet" href="{% static 'user_app/css/styles.css' %}" media="screen" title="Welcome" charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="sportify.js"></script>
 </head>
 <body>
-    <h1>ALL ARTIST</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="jumbotron">
+                    <h1>You are logged in. <br>Welcome to Sportify, {{request.session.first_name}}.</h1>
+                </div>
+           </div>
+        </div>
+        <h1>ALL ARTISTS</h1>
    
 <table >
   <tr>
@@ -29,8 +39,17 @@
     </tr>
     {% endfor %}
 </table>
-   <a href="{% url 'music_app:addArtist' %}">ADD A NEW ARTIST</a>
-
+    <a href="{% url 'music_app:addArtist' %}">ADD A NEW ARTIST</a>
+    <div class="row">
+        <form action="/logout">
+            <input type="submit" name="logout" value="Logout {{first_name}}" class="action_button">
+        </form>
+    </div>
+    <div class="row">
+        <div col-md-12>
+            <h1 class="footer">&copyCopyright 2017 | Sportify Changos</h1>
+        </div>
+    </div>
 
 </body>
 </html>
