--- a/apps/music_app/templates/music_app/displayArtist.html
+++ b/apps/music_app/templates/music_app/displayArtist.html
@@ -12,7 +12,11 @@
     <h3> ARTIST BIO: {{artist.artist_bio}}</h3>
     <h3>CREATED: {{artist.created_at}}</h3>
 
-    <a href="{% url 'music_app:editArtist' artist_id=artist.id %}">Edit</a> | <a href="{% url 'music_app:deleteArtist' artist_id=artist.id %}">Delete</a> | <a href="{% url 'music_app:index' %}">Home</a> | <a href="{% url 'music_app:addAlbum' artist_id=artist.id %}">Add Album</a><br>
+    <a href="{% url 'music_app:editArtist' artist_id=artist.id %}">Edit</a> |
+    <a href="{% url 'music_app:deleteArtist' artist_id=artist.id %}">Delete</a> |
+    <a href="{% url 'music_app:index' %}">Home</a> |
+    <a href="{% url 'music_app:addAlbum' artist_id=artist.id %}">Add Album</a> |
+<br>
 
 
       
@@ -28,7 +32,10 @@
     <td>{{album.id}}</td>
     <td>{{album.album_name}}</td>
     <td>{{album.album_year}}</td>
-    <td><a href="{% url 'music_app:viewAlbum' album_id=album.id %}">Show Album</a> | <a href="{% url 'music_app:updateAlbum' album_id=album.id %}">Edit Album</a> | <a href="{% url 'music_app:deleteAlbum' album_id=album.id artist_id=artist.id %}">Delete Album</a></td>
+    <td><a href="{% url 'music_app:viewAlbum' album_id=album.id %}">Show Album</a> |
+        <a href="{% url 'music_app:updateAlbum' album_id=album.id %}">Edit Album</a> | 
+        <a href="{% url 'music_app:deleteAlbum' album_id=album.id artist_id=artist.id %}">Delete Album</a> | 
+        <a href="{% url 'music_app:viewSong' album_id=album.id artist_id=artist.id %}">Add Song</a></td>
     </tr>
     {% endfor %}
 </table>
