--- a/apps/music_app/templates/music_app/displayArtist.html
+++ b/apps/music_app/templates/music_app/displayArtist.html
@@ -1,37 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name='viewport' content="width=device-width initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'user_app/css/styles.css' %}" media="screen" title="Login/Registration" charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="{% static 'user_app/sportify.js' %}"></script>
 </head>
 <body>
-    <h2>ARTIST NUMBER: {{artist.id}}</h2>
-    <h3>ARTIST NAME: {{artist.artist_name}}</h3>   
-    <h3> ARTIST BIO: {{artist.artist_bio}}</h3>
-    <h3>CREATED: {{artist.created_at}}</h3>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="jumbotron main">
+                    <form action="/logout">
+                        <input type="submit" name="logout" value="Logout {{request.session.first_name}}" class="action_button">
+                    </form>
+                    <h1>{{artist.artist_name}}</h1>
+                    <h4>{{artist.artist_bio}}</h4>
+                </div>
+           </div>
+        </div>
 
-    <a href="{% url 'music_app:editArtist' artist_id=artist.id %}">Edit</a> | <a href="{% url 'music_app:deleteArtist' artist_id=artist.id %}">Delete</a> | <a href="{% url 'music_app:index' %}">Home</a> | <a href="{% url 'music_app:addAlbum' artist_id=artist.id %}">Add Album</a><br>
+        <a href="{% url 'music_app:editArtist' artist_id=artist.id %}">Edit</a> | <a href="{% url 'music_app:deleteArtist' artist_id=artist.id %}">Delete</a> | <a href="{% url 'music_app:index' %}">Home</a> | <a href="{% url 'music_app:addAlbum' artist_id=artist.id %}">Add Album</a><br>
 
+        <div class="row">
+            <div class="col-md-12">
+            <table class="table table-hover box">
+                <thead>
+                    <tr>
+                    <th>ALBUM NAME </th>  
+                    <th>YEAR</th>
+                    <th>ACTIONS</th>
+                    </tr>
+                    {% for album in albums %}
+                </thead>
+                <tbody>
+                    <tr>
+                    <td><a href="{% url 'music_app:viewAlbum' album_id=album.id %}">{{album.album_name}}</a></td>
+                    <td>{{album.album_year}}</td>
+                    <td><a href="{% url 'music_app:updateAlbum' album_id=album.id %}">Edit Album</a> | <a href="{% url 'music_app:deleteAlbum' album_id=album.id artist_id=artist.id %}">Delete Album</a></td>
+                    </tr>
+                </tbody>
+                    {% endfor %}
+            </table>
 
-      
-<table >
-  <tr>
-    <th>id </th>
-    <th>ALBUM NAME </th>  
-    <th>YEAR</th>
-    <th>ACTIONS</th>
-  </tr>
-    {% for album in albums %}
-    <tr>
-    <td>{{album.id}}</td>
-    <td>{{album.album_name}}</td>
-    <td>{{album.album_year}}</td>
-    <td><a href="{% url 'music_app:viewAlbum' album_id=album.id %}">Show Album</a> | <a href="{% url 'music_app:updateAlbum' album_id=album.id %}">Edit Album</a> | <a href="{% url 'music_app:deleteAlbum' album_id=album.id artist_id=artist.id %}">Delete Album</a></td>
-    </tr>
-    {% endfor %}
-</table>
+    <div class="row">
+        <div col-md-12>
+            <h1 class="footer">&copyCopyright 2017 | Sportify Changos</h1>
+        </div>
+    </div>
 
 </body>
 </html>
