--- a/apps/music_app/templates/music_app/index.html
+++ b/apps/music_app/templates/music_app/index.html
@@ -8,42 +8,41 @@
     <link rel="stylesheet" href="{% static 'user_app/css/styles.css' %}" media="screen" title="Welcome" charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script src="sportify.js"></script>
+    <script src="{% static 'user_app/sportify.js' %}"></script>
 </head>
 <body>
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <div class="jumbotron">
-                    <h1>You are logged in. <br>Welcome to Sportify, {{request.session.first_name}}.</h1>
+                <div class="jumbotron main">
+                    <form action="/logout">
+                        <input type="submit" name="logout" value="Logout {{request.session.first_name}}" class="action_button">
+                    </form>
+                    <h1>your music, {{request.session.first_name}} {{request.session.last_name}}.</h1>
                 </div>
            </div>
         </div>
-        <h1>ALL ARTISTS</h1>
-   
-<table >
-  <tr>
-    <th>id </th>
-    <th>ARTIST NAME </th> 
-    <th>ARTIST BIO </th> 
-    <th>CREATED AT </th>
-    <th>ACTIONS </th>
-  </tr>
-    {% for artist in artists %}
-    <tr>
-    <td>{{artist.id}}</td>
-    <td>{{artist.artist_name}}</td>
-    <td>{{artist.artist_bio}}</td>
-    <td>{{artist.created_at}}</td>
-    <td><a href="{% url 'music_app:viewArtist' artist_id=artist.id %}">Show</a> | <a href="{% url 'music_app:editArtist' artist_id=artist.id %}">Edit</a> | <a href="{% url 'music_app:deleteArtist' artist_id=artist.id %}">Delete</a></td>
-    </tr>
-    {% endfor %}
-</table>
+        <div class="row">
+            <div class="col-md-12r">
+                <table class="table table-hover box">
+                    <thead>
+                        <tr>
+                            <th><h1>your artists</h1></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for artist in artists %}
+                        <tr>
+                            <td><a href="{% url 'music_app:viewArtist' artist_id=artist.id %}">{{artist.artist_name}}</a></td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     <a href="{% url 'music_app:addArtist' %}">ADD A NEW ARTIST</a>
     <div class="row">
-        <form action="/logout">
-            <input type="submit" name="logout" value="Logout {{first_name}}" class="action_button">
-        </form>
+        
     </div>
     <div class="row">
         <div col-md-12>
