--- a/apps/music_app/templates/music_app/displayArtist.html
+++ b/apps/music_app/templates/music_app/displayArtist.html
@@ -39,9 +39,11 @@
                 </thead>
                 <tbody>
                     <tr>
-                    <td><a href="{% url 'music_app:viewAlbum' album_id=album.id %}">{{album.album_name}}</a></td>
+                    <td><a href="{% url 'music_app:viewSong' album_id=album.id artist_id=artist.id %}">{{album.album_name}}</a></td>
                     <td>{{album.album_year}}</td>
-                    <td><a href="{% url 'music_app:updateAlbum' album_id=album.id %}">Edit Album</a> | <a href="{% url 'music_app:deleteAlbum' album_id=album.id artist_id=artist.id %}">Delete Album</a></td>
+                    <td><a href="{% url 'music_app:updateAlbum' album_id=album.id %}">Edit Album</a> |
+                        <a href="{% url 'music_app:deleteAlbum' album_id=album.id artist_id=artist.id %}">Delete Album</a> |
+                        <a href="{% url 'music_app:viewSong' album_id=album.id artist_id=artist.id %}">Add Song</a></td>
                     </tr>
                 </tbody>
                     {% endfor %}
