--- a/apps/music_app/templates/music_app/index.html
+++ b/apps/music_app/templates/music_app/index.html
@@ -18,16 +18,22 @@
                     <form action="/logout">
                         <input type="submit" name="logout" value="Logout {{request.session.first_name}}" class="action_button">
                     </form>
-                    <h1>your music, {{request.session.first_name}} {{request.session.last_name}}.</h1>
+                    <h1>your music, {{request.session.first_name}}.</h1>
+                    <div class="row">
+                        <div class="md-col-6">
+                        <a href="{% url 'music_app:addArtist' %}">NEW ARTIST</a> |
+                        <a href="{% url 'playlist_app:addPlaylist' %}">NEW PLAYLIST</a>
+                        </div>
+                    </div>
                 </div>
-           </div>
+            </div>
         </div>
         <div class="row">
-            <div class="col-md-12r">
+            <div class="col-md-6">
                 <table class="table table-hover box">
                     <thead>
                         <tr>
-                            <th><h1>your artists</h1></th>
+                            <th><h1>all artists</h1></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -39,11 +45,25 @@
                     </tbody>
                 </table>
             </div>
+            <div class="col-md-6">
+                <table class="table table-hover box">
+                    <thead>
+                        <tr>
+                            <th><h1>your playlists</h1></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for playlist in playlists %}
+                        {% if playlist.user_id == request.session.user_id %}
+                        <tr>
+                            <td><a href="{% url 'playlist_app:viewPlaylist' %}">{{playlist.playlist_name}}</a></td>
+                        </tr>
+                        {% endif %}
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
-    <a href="{% url 'music_app:addArtist' %}">ADD A NEW ARTIST</a>
-    <div class="row">
-        
-    </div>
     <div class="row">
         <div col-md-12>
             <h1 class="footer">&copyCopyright 2017 | Sportify Changos</h1>
